Create navbar and style

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title></title>
   </head>
   <body>
+    <nav class="navbar flex align-center padding">
+      <div id="logo"><a href="#">The Knowledge Keep</a></div>
+    </nav>
     <div id="wrapper"></div>
   </body>
 </html>
