--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
     <title></title>
   </head>
   <body>
-    <nav class="navbar flex align-center padding">
+    <nav class="navbar">
       <div id="logo"><a href="#">The Knowledge Keep</a></div>
+      <button class="button-icon">
+        <svg
+          class="icon"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512">
+          <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+          <path
+            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM232 344V280H168c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V168c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H280v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
+        </svg>
+      </button>
     </nav>
-    <div id="wrapper"></div>
   </body>
 </html>
