Add 'add book' button

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
         </svg>
       </button>
     </nav>
+    <main>
+      <div class="container books"></div>
+    </main>
   </body>
 </html>
