Add render cards in library func

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </button>
     </nav>
     <main>
-      <div class="container books"></div>
+      <div id="library" class="container"></div>
     </main>
   </body>
 </html>
