--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar">
       <div id="logo"><a href="#">The Knowledge Keep</a></div>
-      <button class="button-icon">
+      <button id="add" class="button-icon">
         <svg
           class="icon"
           xmlns="http://www.w3.org/2000/svg"
@@ -30,6 +30,7 @@
     </nav>
     <main>
       <div id="library" class="container"></div>
+      <div class="modal"><div class="modal-content">yes</div></div>
     </main>
   </body>
 </html>
