--- a/index.html
+++ b/index.html
@@ -30,7 +30,38 @@
     </nav>
     <main>
       <div id="library" class="container"></div>
-      <div class="modal"><div class="modal-content">yes</div></div>
+      <div class="modal">
+        <div class="modal-content">
+          <form name="add-form" autocomplete="off">
+            <div>
+              <input
+                type="text"
+                id="form-title"
+                name="form-title"
+                placeholder="Title" />
+            </div>
+            <div>
+              <input
+                type="text"
+                id="form-author"
+                name="form-author"
+                placeholder="Author" />
+            </div>
+            <div>
+              <input
+                type="number"
+                id="form-pages"
+                name="form-pages"
+                placeholder="Number of pages" />
+            </div>
+            <div>
+              <label class="checkbox-label">
+                <input type="checkbox" id="form-read" name="form-read" class="checkbox-input"/>
+                Have you read it?
+              </label>
+            </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
