--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       rel="stylesheet" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script.js" defer></script>
-    <title></title>
+    <title>The Knowledge Keep
+    </title>
   </head>
   <body>
     <nav class="navbar">
@@ -54,12 +56,11 @@
                 name="form-pages"
                 placeholder="Number of pages" />
             </div>
-            <div>
-              <label class="checkbox-label">
-                <input type="checkbox" id="form-read" name="form-read" class="checkbox-input"/>
-                Have you read it?
-              </label>
-            </div>
+              <div class="checkbox-container">
+                <label class="checkbox-label">
+                  Have you read it?</label>
+                  <input type="checkbox" id="form-read" name="form-read" class="checkbox-input"/>
+              </div>
         </div>
       </div>
     </main>
