--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       rel="stylesheet" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script src="script.js" defer></script>
-    <title>The Knowledge Keep
-    </title>
+    <title>The Knowledge Keep</title>
   </head>
   <body>
     <nav class="navbar">
@@ -32,9 +33,13 @@
     </nav>
     <main>
       <div id="library" class="container"></div>
-      <div class="modal">
+      <div id="modal" class="modal">
         <div class="modal-content">
+          <div class="modal-title">
+            <p>Add a book</p>
+          </div>
           <form name="add-form" autocomplete="off">
+            <div class="close" id="modal-close">&times;</div>
             <div>
               <input
                 type="text"
@@ -56,11 +61,16 @@
                 name="form-pages"
                 placeholder="Number of pages" />
             </div>
-              <div class="checkbox-container">
-                <label class="checkbox-label">
-                  Have you read it?</label>
-                  <input type="checkbox" id="form-read" name="form-read" class="checkbox-input"/>
-              </div>
+            <div class="checkbox-container">
+              <label class="checkbox-label"> Done reading?</label>
+              <input
+                type="checkbox"
+                id="form-read"
+                name="form-read"
+                class="checkbox-input" />
+            </div>
+            <input type="submit" value="Submit" class="submit-btn" />
+          </form>
         </div>
       </div>
     </main>
